Fix broken menu on mobile layout

--- a/asset/sass/_zf.scss
+++ b/asset/sass/_zf.scss
@@ -12,9 +12,6 @@
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
     .navbar-nav {
         float: none!important;
         margin: 7.5px -15px;
@@ -52,6 +49,15 @@
   .component-list .component {
       width: 49%;
   }
+}
+
+@media (min-width: 768px) {
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
 }
 
 .docs, .zf-components {
